# merkel

./: CMakeLists.txt  CSVReader.cpp  CSVReader.h  MerkelMain.cpp  MerkelMain.h  OrderBook.cpp  OrderBook.h  OrderBookEntry.cpp  OrderBookEntry.h  Wallet.cpp
auth/: User.cpp  User.h  UserManager.cpp  UserManager.h
candlestick/: Candlestick.cpp  Candlestick.h  CandlestickCalculator.cpp  CandlestickCalculator.h
simulation/: TradeSimulator.cpp  TradeSimulator.h
transactions/: Transaction.cpp  Transaction.h  TransactionManager.cpp  TransactionManager.h
wallet/: Wallet.cpp  Wallet.h  WalletManager.cpp  WalletManager.h  WalletRecord.cpp  WalletRecord.h
